@@ -190,10 +190,29 @@ _bfd_elf_allocate_ifunc_dyn_relocs (struct bfd_link_info *info,
   /* Support garbage collection against STT_GNU_IFUNC symbols.  */
   if (h->plt.refcount <= 0 && h->got.refcount <= 0)
     {
-      h->got = htab->init_got_offset;
-      h->plt = htab->init_plt_offset;
-      *head = NULL;
-      return TRUE;
+      /* When building shared library, we need to handle the case
+         where it is marked with regular reference, but not non-GOT
+	 reference.  It may happen if we didn't see STT_GNU_IFUNC
+	 symbol at the time when checking relocations.  */
+      bfd_size_type count = 0;
+
+      if (info->shared
+	  && !h->non_got_ref
+	  && h->ref_regular)
+	{
+	  for (p = *head; p != NULL; p = p->next)
+	    count += p->count;
+	  if (count != 0)
+	    h->non_got_ref = 1;
+	}
+
+      if (count == 0)
+	{
+	  h->got = htab->init_got_offset;
+	  h->plt = htab->init_plt_offset;
+	  *head = NULL;
+	  return TRUE;
+	}
     }
 
   /* Return and discard space for dynamic relocations against it if
