@@ -3,9 +3,11 @@
 foo:
         .global foo
         movl ifunc@GOT(%ecx), %eax
-	movl ifunc@GOTOFF(%ecx), %eax
+        movl ifunc@GOTOFF(%ecx), %eax
 	call ifunc@PLT
 	call ifunc
+        movl xxx@GOT(%ecx), %eax
+        movl xxx, %eax
         ret
 
         .section .text.bar,"ax",@progbits
@@ -16,6 +18,10 @@ bar:
 
         .section .text.ifunc,"ax",@progbits
         .type ifunc, @gnu_indirect_function
-        .global ifunc
+	.global ifunc
 ifunc:
         ret
+
+        .section .data.foo,"aw",@progbits
+xxx:
+	.long ifunc 
