@@ -6,6 +6,7 @@ foo:
         movl ifunc(%rip), %eax
 	call ifunc@PLT
 	call ifunc
+        movl xxx(%rip), %eax
         ret
 
         .section .text.bar,"ax",@progbits
@@ -19,3 +20,7 @@ bar:
         .global ifunc
 ifunc:
         ret
+
+        .section .data.foo,"aw",@progbits
+xxx:
+	.quad ifunc 
