@@ -1,0 +1,5 @@
+	.text
+        .type ifunc, @gnu_indirect_function
+	.globl ifunc
+ifunc:
+        ret
