@@ -1,3 +1,10 @@
+2011-04-11  Dan McDonald  <dan@wellkeeper.com>
+
+	PR gas/12296
+	* gas/arm/arch7.s: Add SVC insn.
+	* gas/arm/arch7.d: Add disassembly of SVC insn.
+	* gas/arm/attr-march-armv7.d: Add arch profile tag.
+
 2010-11-15  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gas/mips/elf-rel28.s, gas/mips/elf-rel28-n32.d,
